<resources>
    <string name="app_name">WordBox</string>

    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="password_confirm_hint">Confirm password</string>
    <string name="login">Sign in</string>
    <string name="register">Register</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Sign off</string>
    <string name="title_activity_create_box">Create a Box</string>
    <string name="next_word">Press enter for next word</string>
    <string name="new_word_done">Done</string>
    <string name="view_requests">View</string>
    <string name="accept_request">Accept</string>
    <string name="reject_request">Reject</string>
    <string name="add_invite_friend">Add/Invite New Friend</string>
    <string name="title_activity_requests">Requests</string>
    <string name="title_activity_record_word">Record Word</string>

    <string name="start_recording">Start</string>
    <string name="send_recording">Send</string>
</resources>
