<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:src="@drawable/wordbox"
        android:layout_marginTop="-40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center|bottom">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:textColorHint="@android:color/darker_gray"
            android:ems="10"
            android:id="@+id/email"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="text"
            android:hint="@string/username_hint"
            android:textColorHint="@android:color/darker_gray"
            android:ems="10"
            android:id="@+id/username"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:textColorHint="@android:color/darker_gray"
            android:ems="10"
            android:id="@+id/password"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:hint="@string/password_confirm_hint"
            android:textColorHint="@android:color/darker_gray"
            android:ems="10"
            android:id="@+id/password_confirm"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/register"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:background="@color/darkblue"
            android:id="@+id/register"/>
    </LinearLayout>
</FrameLayout>